--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8" />
-<title>TENNIS CD9 2026</title>
+<title>TENNIS ĐINH MỆNH CD9 2026</title>
+
 <style>
 body{
   margin:0;
@@ -63,24 +64,23 @@ th{
   padding:8px;
   margin-bottom:10px;
 }
-.green{ background:#8bc34a; }
-.yellow{ background:#fff59d; }
-.orange{ background:#ffc107; }
-.blue{ background:#00e5ff; }
-.gray{ background:#b0bec5; }
 
-.win{ background:#4caf50; }
-.draw{ background:#ffffff; }
-.lose{ background:#f44336; }
+/* COLORS */
+.red{background:#ffcdd2;color:#b71c1c;font-weight:bold}
+.yellow{background:#fff59d;color:#795548;font-weight:bold}
+.green{background:#c8e6c9;color:#1b5e20;font-weight:bold}
+.gray{background:#eceff1}
+.blue{background:#e3f2fd}
 
-.select-box{
-  margin-bottom:10px;
-}
+.win{ background:#4caf50;color:#fff }
+.draw{ background:#ffffff }
+.lose{ background:#f44336;color:#fff }
 </style>
 </head>
+
 <body>
 
-<header>TENNIS CD9 2026</header>
+<header>TENNIS ĐỊNH MỆNH CD9 2026</header>
 
 <nav>
   <button class="active" onclick="showTab('bxh')">BXH</button>
@@ -92,10 +92,10 @@ th{
 
 <!-- BXH -->
 <section id="bxh" class="active">
-  <div class="title">KẾT QUẢ XẾP HẠNG CÁC ĐỘI</div>
+  <div class="title">BẢNG XẾP HẠNG</div>
   <table>
     <tr>
-      <th>STT</th><th>Đội</th><th>Trận</th><th>Thắng</th><th>Hòa</th><th>Thua</th><th>Hiệu số</th><th>Điểm</th>
+      <th>STT</th><th>Đội</th><th>Trận</th><th>Thắng</th><th>Hòa</th><th>Thua</th><th>HS</th><th>Điểm</th>
     </tr>
     <tr><td>1</td><td>D2</td><td>1</td><td>1</td><td>0</td><td>0</td><td>+5</td><td>3</td></tr>
     <tr><td>2</td><td>D1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
@@ -106,23 +106,16 @@ th{
 
 <!-- MATCHES -->
 <section id="matches">
-  <div class="title">CHI TIẾT KẾT QUẢ TỪNG TRẬN ĐẤU</div>
-  <table id="matchesTable">
-    <tr>
-      <th colspan="3" class="green">NGÀY THÁNG NĂM</th>
-      <th colspan="4" class="green">DANH SÁCH CÁC CẶP ĐẤU</th>
-    </tr>
+  <div class="title">CHI TIẾT TRẬN ĐẤU</div>
+  <table>
     <tr>
       <th>Ngày</th><th>Tháng</th><th>Năm</th>
-      <th class="green">Sân Ngon</th>
-      <th colspan="2" class="yellow">Tỷ số</th>
-      <th class="orange">Sân Mù Mắt</th>
+      <th>Sân Ngon</th><th colspan="2">Tỷ số</th><th>Sân Mù Mắt</th>
     </tr>
     <tr>
       <td class="gray">16</td><td class="gray">1</td><td>2025</td>
       <td class="blue">D2</td>
-      <td class="yellow">6</td>
-      <td class="yellow">1</td>
+      <td>6</td><td>1</td>
       <td class="blue">D3</td>
     </tr>
   </table>
@@ -130,7 +123,7 @@ th{
 
 <!-- TEAMS -->
 <section id="teams">
-  <div class="title">TEAMS</div>
+  <div class="title">DANH SÁCH ĐỘI</div>
   <table>
     <tr><th>Đội</th><th>Ghi chú</th></tr>
     <tr><td>D1</td><td></td></tr>
@@ -142,50 +135,40 @@ th{
 
 <!-- PAIRS -->
 <section id="pairs">
-  <div class="title">PAIRS</div>
-  <table>
-    <tr><th>Cặp đấu</th><th>Đội</th></tr>
+  <div class="title">PAIRS – TÌNH TRẠNG CẶP ĐẤU</div>
+  <table id="pairsTable">
+    <thead>
+      <tr>
+        <th></th>
+        <th>D1</th>
+        <th>D2</th>
+        <th>D3</th>
+        <th>D4</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
   </table>
 </section>
 
+
 <!-- CHECK -->
 <section id="check">
-  <div class="title">TRA CỨU THỐNG KÊ KẾT QUẢ TỪNG ĐỘI</div>
-
-  <div class="select-box">
-    ĐỘI:
-    <select id="teamSelect">
-      <option value="D1">D1</option>
-      <option value="D2" selected>D2</option>
-      <option value="D3">D3</option>
-      <option value="D4">D4</option>
-    </select>
-  </div>
-
-  <table>
+  <div class="title">THÔNG TIN CÁC CẶP ĐẤU</div>
+  <table id="checkMatrix">
     <thead>
       <tr>
-        <th colspan="3" class="green">NGÀY THÁNG NĂM</th>
-        <th colspan="4" class="green">DANH SÁCH CÁC CẶP ĐẤU</th>
-        <th>Kết quả</th>
-      </tr>
-      <tr>
-        <th>Ngày</th><th>Tháng</th><th>Năm</th>
-        <th class="green">Sân Ngon</th>
-        <th colspan="2" class="yellow">Tỷ số</th>
-        <th class="orange">Sân Mù Mắt</th>
-        <th>Kết quả</th>
+        <th></th>
+        <th>D1</th>
+        <th>D2</th>
+        <th>D3</th>
+        <th>D4</th>
       </tr>
     </thead>
-    <tbody id="checkBody"></tbody>
+    <tbody></tbody>
   </table>
 </section>
 
 <script>
-const matches = [
-  {day:16, month:1, year:2025, home:"D2", hs:6, as:1, away:"D3"}
-];
-
 function showTab(id){
   document.querySelectorAll("section").forEach(s=>s.classList.remove("active"));
   document.querySelectorAll("nav button").forEach(b=>b.classList.remove("active"));
@@ -193,43 +176,43 @@ function showTab(id){
   event.target.classList.add("active");
 }
 
-function getResult(m, team){
-  if(m.home===team){
-    if(m.hs>m.as) return "Thắng";
-    if(m.hs<m.as) return "Thua";
-    return "Hòa";
-  }
-  if(m.away===team){
-    if(m.as>m.hs) return "Thắng";
-    if(m.as<m.hs) return "Thua";
-    return "Hòa";
-  }
+/* ===== PAIRS FROM GOOGLE SHEET ===== */
+const SHEET_ID="1pak2Yy4rZ3U50rYj2rlfCOkqyDDpnOns";
+const GID="1896492975";   // Sheet PAIRS
+const URL=`https://docs.google.com/spreadsheets/d/${SHEET_ID}/export?format=csv&gid=${GID}`;
+const teams=["D1","D2","D3","D4"];
+
+function parseCSV(t){
+  return t.trim().split("\n").map(r=>r.split(",").map(c=>c.replace(/^"|"$/g,"")));
+}
+function pairClass(v){
+  if(v.includes("Chưa")) return "red";
+  if(v.includes("Thiếu")) return "yellow";
+  return "green";
 }
 
-function renderCheck(){
-  const team=document.getElementById("teamSelect").value;
-  const body=document.getElementById("checkBody");
+fetch(URL)
+.then(r=>r.text())
+.then(txt=>{
+  const data=parseCSV(txt).slice(1).map(r=>r.slice(1,5));
+  const body=document.querySelector("#pairsTable tbody");
   body.innerHTML="";
-  matches.filter(m=>m.home===team||m.away===team).forEach(m=>{
-    const r=getResult(m,team);
-    const cls=r==="Thắng"?"win":r==="Thua"?"lose":"draw";
-    body.innerHTML+=`
-      <tr>
-        <td class="gray">${m.day}</td>
-        <td class="gray">${m.month}</td>
-        <td>${m.year}</td>
-        <td class="blue">${m.home}</td>
-        <td class="yellow">${m.hs}</td>
-        <td class="yellow">${m.as}</td>
-        <td class="blue">${m.away}</td>
-        <td class="${cls}">${r}</td>
-      </tr>`;
+  teams.forEach((t,i)=>{
+    let tr=`<tr><th>${t}</th>`;
+    teams.forEach((_,j)=>{
+      if(i===j){
+        tr+=`<td></td>`;
+      }else{
+        const v=data[i][j]||"Chưa đấu";
+        tr+=`<td class="${pairClass(v)}">${v}</td>`;
+      }
+    });
+    tr+="</tr>";
+    body.innerHTML+=tr;
   });
-}
-
-document.getElementById("teamSelect").addEventListener("change",renderCheck);
-renderCheck();
+});
 </script>
 
 </body>
 </html>
+
