--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8" />
-<title>TENNIS ĐINH MỆNH CD9 2026</title>
-
+<title>TENNIS CD9 2026</title>
 <style>
 body{
   margin:0;
@@ -65,22 +64,23 @@ th{
   margin-bottom:10px;
 }
 
-/* COLORS */
-.red{background:#ffcdd2;color:#b71c1c;font-weight:bold}
-.yellow{background:#fff59d;color:#795548;font-weight:bold}
-.green{background:#c8e6c9;color:#1b5e20;font-weight:bold}
-.gray{background:#eceff1}
-.blue{background:#e3f2fd}
+.green{ background:#8bc34a; }
+.yellow{ background:#fff59d; }
+.red{ background:#ffcdd2; }
+.blue{ background:#00e5ff; }
+.gray{ background:#b0bec5; }
 
-.win{ background:#4caf50;color:#fff }
-.draw{ background:#ffffff }
-.lose{ background:#f44336;color:#fff }
+.win{ background:#4caf50; }
+.draw{ background:#ffffff; }
+.lose{ background:#f44336; }
+
+.select-box{ margin-bottom:10px; }
 </style>
 </head>
 
 <body>
 
-<header>TENNIS ĐỊNH MỆNH CD9 2026</header>
+<header>TENNIS CD9 2026</header>
 
 <nav>
   <button class="active" onclick="showTab('bxh')">BXH</button>
@@ -92,10 +92,10 @@ th{
 
 <!-- BXH -->
 <section id="bxh" class="active">
-  <div class="title">BẢNG XẾP HẠNG</div>
+  <div class="title">KẾT QUẢ XẾP HẠNG CÁC ĐỘI</div>
   <table>
     <tr>
-      <th>STT</th><th>Đội</th><th>Trận</th><th>Thắng</th><th>Hòa</th><th>Thua</th><th>HS</th><th>Điểm</th>
+      <th>STT</th><th>Đội</th><th>Trận</th><th>Thắng</th><th>Hòa</th><th>Thua</th><th>Hiệu số</th><th>Điểm</th>
     </tr>
     <tr><td>1</td><td>D2</td><td>1</td><td>1</td><td>0</td><td>0</td><td>+5</td><td>3</td></tr>
     <tr><td>2</td><td>D1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
@@ -106,24 +106,24 @@ th{
 
 <!-- MATCHES -->
 <section id="matches">
-  <div class="title">CHI TIẾT TRẬN ĐẤU</div>
+  <div class="title">CHI TIẾT KẾT QUẢ TỪNG TRẬN ĐẤU</div>
   <table>
     <tr>
-      <th>Ngày</th><th>Tháng</th><th>Năm</th>
-      <th>Sân Ngon</th><th colspan="2">Tỷ số</th><th>Sân Mù Mắt</th>
+      <th colspan="3" class="green">NGÀY THÁNG NĂM</th>
+      <th colspan="4" class="green">DANH SÁCH CÁC CẶP ĐẤU</th>
     </tr>
     <tr>
-      <td class="gray">16</td><td class="gray">1</td><td>2025</td>
-      <td class="blue">D2</td>
-      <td>6</td><td>1</td>
-      <td class="blue">D3</td>
+      <th>Ngày</th><th>Tháng</th><th>Năm</th>
+      <th class="green">Sân Ngon</th>
+      <th colspan="2" class="yellow">Tỷ số</th>
+      <th class="yellow">Sân Mù Mắt</th>
     </tr>
   </table>
 </section>
 
 <!-- TEAMS -->
 <section id="teams">
-  <div class="title">DANH SÁCH ĐỘI</div>
+  <div class="title">TEAMS</div>
   <table>
     <tr><th>Đội</th><th>Ghi chú</th></tr>
     <tr><td>D1</td><td></td></tr>
@@ -135,7 +135,7 @@ th{
 
 <!-- PAIRS -->
 <section id="pairs">
-  <div class="title">PAIRS – TÌNH TRẠNG CẶP ĐẤU</div>
+  <div class="title">THÔNG TIN CÁC CẶP ĐẤU</div>
   <table id="pairsTable">
     <thead>
       <tr>
@@ -150,21 +150,29 @@ th{
   </table>
 </section>
 
-
 <!-- CHECK -->
 <section id="check">
-  <div class="title">THÔNG TIN CÁC CẶP ĐẤU</div>
-  <table id="checkMatrix">
+  <div class="title">TRA CỨU THỐNG KÊ KẾT QUẢ TỪNG ĐỘI</div>
+
+  <div class="select-box">
+    ĐỘI:
+    <select id="teamSelect">
+      <option value="D1">D1</option>
+      <option value="D2" selected>D2</option>
+      <option value="D3">D3</option>
+      <option value="D4">D4</option>
+    </select>
+  </div>
+
+  <table>
     <thead>
       <tr>
-        <th></th>
-        <th>D1</th>
-        <th>D2</th>
-        <th>D3</th>
-        <th>D4</th>
+        <th colspan="3" class="green">NGÀY THÁNG NĂM</th>
+        <th colspan="4" class="green">DANH SÁCH CÁC CẶP ĐẤU</th>
+        <th>Kết quả</th>
       </tr>
     </thead>
-    <tbody></tbody>
+    <tbody id="checkBody"></tbody>
   </table>
 </section>
 
@@ -176,14 +184,16 @@ function showTab(id){
   event.target.classList.add("active");
 }
 
-/* ===== PAIRS FROM GOOGLE SHEET ===== */
-const SHEET_ID="1pak2Yy4rZ3U50rYj2rlfCOkqyDDpnOns";
-const GID="1896492975";   // Sheet PAIRS
-const URL=`https://docs.google.com/spreadsheets/d/${SHEET_ID}/export?format=csv&gid=${GID}`;
-const teams=["D1","D2","D3","D4"];
+/* ========= PAIRS FROM GOOGLE SHEET ========= */
+const SHEET_ID = "1pak2Yy4rZ3U50rYj2rlfCOkqyDDpnOns";
+const GID_PAIRS = "1896492975"; // GID sheet PAIRS
+const PAIRS_URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/export?format=csv&gid=${GID_PAIRS}`;
+const teams = ["D1","D2","D3","D4"];
 
 function parseCSV(t){
-  return t.trim().split("\n").map(r=>r.split(",").map(c=>c.replace(/^"|"$/g,"")));
+  return t.trim().split("\n").map(r =>
+    r.split(",").map(c => c.replace(/^"|"$/g,""))
+  );
 }
 function pairClass(v){
   if(v.includes("Chưa")) return "red";
@@ -191,28 +201,27 @@ function pairClass(v){
   return "green";
 }
 
-fetch(URL)
+fetch(PAIRS_URL)
 .then(r=>r.text())
 .then(txt=>{
-  const data=parseCSV(txt).slice(1).map(r=>r.slice(1,5));
-  const body=document.querySelector("#pairsTable tbody");
-  body.innerHTML="";
+  const data = parseCSV(txt).slice(1).map(r=>r.slice(1,5));
+  const body = document.querySelector("#pairsTable tbody");
+  body.innerHTML = "";
   teams.forEach((t,i)=>{
-    let tr=`<tr><th>${t}</th>`;
+    let tr = `<tr><th>${t}</th>`;
     teams.forEach((_,j)=>{
       if(i===j){
-        tr+=`<td></td>`;
+        tr += `<td></td>`;
       }else{
-        const v=data[i][j]||"Chưa đấu";
-        tr+=`<td class="${pairClass(v)}">${v}</td>`;
+        const v = data[i][j] || "Chưa đấu";
+        tr += `<td class="${pairClass(v)}">${v}</td>`;
       }
     });
-    tr+="</tr>";
-    body.innerHTML+=tr;
+    tr += "</tr>";
+    body.innerHTML += tr;
   });
 });
 </script>
 
 </body>
 </html>
-
