--- a/index.html
+++ b/index.html
@@ -2,33 +2,33 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>TENNIS CD9 2026</title>
+
 <style>
 body{
   margin:0;
-  font-family: Arial, Helvetica, sans-serif;
-  background:#f5f5f5;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
+  background:#f4f4f4;
 }
 header{
   background:#000;
   color:#fff;
   text-align:center;
   padding:14px;
-  font-weight:bold;
-  font-size:20px;
+  font-weight:700;
 }
 nav{
   display:flex;
-  background:#000;
+  background:#111;
 }
 nav button{
   flex:1;
   padding:12px;
-  border:none;
-  background:#000;
+  background:#111;
   color:#fff;
-  cursor:pointer;
-  font-weight:bold;
+  border:none;
+  font-weight:600;
 }
 nav button.active{
   background:#fff;
@@ -36,155 +36,77 @@ nav button.active{
 }
 section{
   display:none;
-  padding:20px;
+  padding:12px;
 }
 section.active{
   display:block;
 }
+
 table{
-  border-collapse:collapse;
   width:100%;
+  border-collapse:collapse;
   background:#fff;
 }
 th,td{
-  border:1px solid #ccc;
+  border:1px solid #ddd;
   padding:6px;
   text-align:center;
+  font-size:14px;
 }
 th{
   background:#eee;
-  font-weight:bold;
+  font-weight:700;
 }
-.title{
+
+/* MATCHES layout */
+.matches-title{
   background:#000;
   color:#ffe600;
-  font-weight:bold;
+  font-weight:800;
   text-align:center;
   padding:8px;
-  margin-bottom:10px;
+  margin-bottom:6px;
 }
-.green{ background:#8bc34a; }
-.yellow{ background:#fff59d; }
-.orange{ background:#ffc107; }
-.blue{ background:#00e5ff; }
-.gray{ background:#b0bec5; }
+.matches-sub{
+  background:#caffc9;
+  font-weight:700;
+}
+.col-day,.col-month,.col-year{ width:8%; }
+.col-team{ width:18%; }
+.col-score{ width:8%; background:#fffda0; }
+.col-score2{ width:8%; background:#fffda0; }
+.col-team2{ width:18%; }
 
-.win{ background:#4caf50; }
-.draw{ background:#ffffff; }
-.lose{ background:#f44336; }
-
-.select-box{
-  margin-bottom:10px;
+@media(max-width:600px){
+  th,td{ font-size:12px; padding:4px; }
 }
 </style>
 </head>
+
 <body>
 
 <header>TENNIS CD9 2026</header>
 
 <nav>
-  <button class="active" onclick="showTab('bxh')">BXH</button>
-  <button onclick="showTab('matches')">MATCHES</button>
-  <button onclick="showTab('teams')">TEAMS</button>
-  <button onclick="showTab('pairs')">PAIRS</button>
-  <button onclick="showTab('check')">CHECK</button>
+  <button onclick="showTab('BXH')" class="active">BXH</button>
+  <button onclick="showTab('MATCHES')">MATCHES</button>
+  <button onclick="showTab('TEAMS')">TEAMS</button>
+  <button onclick="showTab('PAIRS')">PAIRS</button>
+  <button onclick="showTab('CHECK')">CHECK</button>
 </nav>
 
-<!-- BXH -->
-<section id="bxh" class="active">
-  <div class="title">KẾT QUẢ XẾP HẠNG CÁC ĐỘI</div>
-  <table>
-    <tr>
-      <th>STT</th><th>Đội</th><th>Trận</th><th>Thắng</th><th>Hòa</th><th>Thua</th><th>Hiệu số</th><th>Điểm</th>
-    </tr>
-    <tr><td>1</td><td>D2</td><td>1</td><td>1</td><td>0</td><td>0</td><td>+5</td><td>3</td></tr>
-    <tr><td>2</td><td>D1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-    <tr><td>3</td><td>D4</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-    <tr><td>4</td><td>D3</td><td>1</td><td>0</td><td>0</td><td>1</td><td>-5</td><td>0</td></tr>
-  </table>
-</section>
-
-<!-- MATCHES -->
-<section id="matches">
-  <div class="title">CHI TIẾT KẾT QUẢ TỪNG TRẬN ĐẤU</div>
-  <table id="matchesTable">
-    <tr>
-      <th colspan="3" class="green">NGÀY THÁNG NĂM</th>
-      <th colspan="4" class="green">DANH SÁCH CÁC CẶP ĐẤU</th>
-    </tr>
-    <tr>
-      <th>Ngày</th><th>Tháng</th><th>Năm</th>
-      <th class="green">Sân Ngon</th>
-      <th colspan="2" class="yellow">Tỷ số</th>
-      <th class="orange">Sân Mù Mắt</th>
-    </tr>
-    <tr>
-      <td class="gray">16</td><td class="gray">1</td><td>2025</td>
-      <td class="blue">D2</td>
-      <td class="yellow">6</td>
-      <td class="yellow">1</td>
-      <td class="blue">D3</td>
-    </tr>
-  </table>
-</section>
-
-<!-- TEAMS -->
-<section id="teams">
-  <div class="title">TEAMS</div>
-  <table>
-    <tr><th>Đội</th><th>Ghi chú</th></tr>
-    <tr><td>D1</td><td></td></tr>
-    <tr><td>D2</td><td></td></tr>
-    <tr><td>D3</td><td></td></tr>
-    <tr><td>D4</td><td></td></tr>
-  </table>
-</section>
-
-<!-- PAIRS -->
-<section id="pairs">
-  <div class="title">PAIRS</div>
-  <table>
-    <tr><th>Cặp đấu</th><th>Đội</th></tr>
-  </table>
-</section>
-
-<!-- CHECK -->
-<section id="check">
-  <div class="title">TRA CỨU THỐNG KÊ KẾT QUẢ TỪNG ĐỘI</div>
-
-  <div class="select-box">
-    ĐỘI:
-    <select id="teamSelect">
-      <option value="D1">D1</option>
-      <option value="D2" selected>D2</option>
-      <option value="D3">D3</option>
-      <option value="D4">D4</option>
-    </select>
-  </div>
-
-  <table>
-    <thead>
-      <tr>
-        <th colspan="3" class="green">NGÀY THÁNG NĂM</th>
-        <th colspan="4" class="green">DANH SÁCH CÁC CẶP ĐẤU</th>
-        <th>Kết quả</th>
-      </tr>
-      <tr>
-        <th>Ngày</th><th>Tháng</th><th>Năm</th>
-        <th class="green">Sân Ngon</th>
-        <th colspan="2" class="yellow">Tỷ số</th>
-        <th class="orange">Sân Mù Mắt</th>
-        <th>Kết quả</th>
-      </tr>
-    </thead>
-    <tbody id="checkBody"></tbody>
-  </table>
-</section>
+<section id="BXH" class="active"></section>
+<section id="MATCHES"></section>
+<section id="TEAMS"></section>
+<section id="PAIRS"></section>
+<section id="CHECK"></section>
 
 <script>
-const matches = [
-  {day:16, month:1, year:2025, home:"D2", hs:6, as:1, away:"D3"}
-];
+const SHEET_ID = "1pak2Yy4rZ3U50rYj2rlfCOkqyDDpnOns";
+
+function gviz(sheet){
+  return `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&sheet=${sheet}`;
+}
 
 function showTab(id){
   document.querySelectorAll("section").forEach(s=>s.classList.remove("active"));
@@ -193,43 +115,85 @@ function showTab(id){
   event.target.classList.add("active");
 }
 
-function getResult(m, team){
-  if(m.home===team){
-    if(m.hs>m.as) return "Thắng";
-    if(m.hs<m.as) return "Thua";
-    return "Hòa";
-  }
-  if(m.away===team){
-    if(m.as>m.hs) return "Thắng";
-    if(m.as<m.hs) return "Thua";
-    return "Hòa";
-  }
+function clean(v){
+  return (v===null || v===undefined) ? "" : v;
 }
 
-function renderCheck(){
-  const team=document.getElementById("teamSelect").value;
-  const body=document.getElementById("checkBody");
-  body.innerHTML="";
-  matches.filter(m=>m.home===team||m.away===team).forEach(m=>{
-    const r=getResult(m,team);
-    const cls=r==="Thắng"?"win":r==="Thua"?"lose":"draw";
-    body.innerHTML+=`
-      <tr>
-        <td class="gray">${m.day}</td>
-        <td class="gray">${m.month}</td>
-        <td>${m.year}</td>
-        <td class="blue">${m.home}</td>
-        <td class="yellow">${m.hs}</td>
-        <td class="yellow">${m.as}</td>
-        <td class="blue">${m.away}</td>
-        <td class="${cls}">${r}</td>
-      </tr>`;
+function loadSimpleTable(sheet, target){
+  fetch(gviz(sheet))
+  .then(r=>r.text())
+  .then(t=>{
+    const json = JSON.parse(t.substring(47).slice(0,-2));
+    const cols = json.table.cols.map(c=>c.label);
+    const rows = json.table.rows;
+
+    let html="<table><tr>";
+    cols.forEach(c=>html+=`<th>${c}</th>`);
+    html+="</tr>";
+
+    rows.forEach(r=>{
+      html+="<tr>";
+      r.c.forEach(c=>html+=`<td>${clean(c?.v)}</td>`);
+      html+="</tr>";
+    });
+
+    html+="</table>";
+    document.getElementById(target).innerHTML=html;
   });
 }
 
-document.getElementById("teamSelect").addEventListener("change",renderCheck);
-renderCheck();
+/* MATCHES custom layout */
+function loadMatches(){
+  fetch(gviz("MATCHES"))
+  .then(r=>r.text())
+  .then(t=>{
+    const j=JSON.parse(t.substring(47).slice(0,-2));
+    const r=j.table.rows;
+
+    let html=`
+    <div class="matches-title">CHI TIẾT KẾT QUẢ TỪNG TRẬN ĐẤU</div>
+    <table>
+      <tr class="matches-sub">
+        <th colspan="3">NGÀY THÁNG NĂM</th>
+        <th colspan="4">DANH SÁCH CÁC CẶP ĐẤU</th>
+      </tr>
+      <tr>
+        <th class="col-day"></th>
+        <th class="col-month"></th>
+        <th class="col-year"></th>
+        <th class="col-team">Sân Ngon</th>
+        <th class="col-score">Tỷ số</th>
+        <th class="col-score2"></th>
+        <th class="col-team2">Sân Mù Mắt</th>
+      </tr>
+    `;
+
+    r.forEach(x=>{
+      html+=`
+      <tr>
+        <td>${clean(x.c[0]?.v)}</td>
+        <td>${clean(x.c[1]?.v)}</td>
+        <td>${clean(x.c[2]?.v)}</td>
+        <td>${clean(x.c[3]?.v)}</td>
+        <td>${clean(x.c[4]?.v)}</td>
+        <td>${clean(x.c[5]?.v)}</td>
+        <td>${clean(x.c[6]?.v)}</td>
+      </tr>`;
+    });
+
+    html+="</table>";
+    document.getElementById("MATCHES").innerHTML=html;
+  });
+}
+
+/* Load all */
+loadSimpleTable("BXH","BXH");
+loadMatches();
+loadSimpleTable("TEAMS","TEAMS");
+loadSimpleTable("PAIRS","PAIRS");
+loadSimpleTable("CHECK","CHECK");
 </script>
 
 </body>
 </html>
+
