--- a/index.html
+++ b/index.html
@@ -200,4 +200,13 @@ async function loadSheet(sheetName, targetId) {
 
 // Chạy tải dữ liệu khi mở trang
 window.addEventListener('DOMContentLoaded', () => {
-    loadSheet("BXH", "
+    loadSheet("BXH", "BXH");
+    loadSheet("MATCHES", "MATCHES");
+    loadSheet("TEAMS", "TEAMS");
+    loadSheet("PAIRS", "PAIRS");
+    loadSheet("CHECK", "CHECK");
+});
+</script>
+
+</body>
+</html>
